Bugs Fixed and Features Added (#18)
* Add Difficulty and Feedback on Multi-choice Questions (#15)

Add feedback and difficulty for multi-choice questions

* Fix Formative Assessment Returning `null` Questions (#17)

Fix #17
